update nav panel

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <td id="logo">DIY guides metadata</td>
                 <td id="navigation">
                     <a href="#domain">Domain</a>
-                    <a href="#elements">Element Specification</a>
-                    <a href="#vocab">Vocab Specification</a>
+                    <a href="#elements">Elements</a>
+                    <a href="#vocab">Vocab</a>
                     <a href="#downloads">Downloads</a>
                     <a href="#essay">Essay</a>
                 </td>
@@ -36,16 +36,6 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>A metadata application profile for a DIY guides website</h1>
-                <button class="btn_one">remove?</button><br>
-                <table>
-                    <tr>
-                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-facebook"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-twitter"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-instagram"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social"><i class="fab fa-medium"></i></a></td>
-                    </tr>
-                </table>
             </td>
             <td id="rightImage" class="animated jackInTheBox" style="animation-delay:2.2s;"></td>
         </tr>
