add element specification table

--- a/index.html
+++ b/index.html
@@ -62,9 +62,51 @@ The following are 17 metadata elements that I have identified as important for u
         <p>
             Yasmin is here dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <!-- Table -->
+						<section>
+							<h4>#1</h4>
+							<div class="table-wrapper">
+								<table>
+									<thead>
+										<tr>
+											<th></th>
+											<th></th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Name</td>
+											<td>fundAgency</td>	
+										</tr>
+										<tr>
+											<td>Label</td>
+											<td>Agency</td>
+										</tr>
+										<tr>
+											<td>URI</td>
+											<td>http://www.utkmetadata.org/specification/utk_namespace/fundAgency</td>
+										</tr>
+										<tr>
+											<td>Definition</td>
+											<td>The funding agency for which the DMP is being prepared.</td>
+										</tr>
+										<tr>
+											<td>Obligation & Occurrence</td>
+											<td>Required</td>
+										</tr>
+										<tr>
+											<td>Example</td>
+											<td>&lt;fundAgency termsource="LCNAF" termsourceid="n2006182431">National Science Foundation (U.S.). Subcommittee on Nanoscale Science, Engineering, and Technology&lt;/fundAgency></td>
+										</tr>
+										<tr>
+											<td>Comments</td>
+											<td></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</section>
+<!-- Table -->
     </div>
     <div id="vocab">
         <h1>Vocabulary Specification</h1>
