edit element specification table

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The following are 17 metadata elements that I have identified as important for u
         <!-- Table -->
 						<section>
 							<h4>#1</h4>
-							<div id="about table">
+							<div id="spec-table">
 								<table>
 									<thead>
 										<tr>
