--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
     <div id="loading">
@@ -66,8 +67,8 @@ I decided to create a new application profile because I could not find a pre-exi
         <!-- Table -->
 						<section>
 							<h4>#1</h4>
-							<div id="spec-table">
-								<table>
+							<div>
+								<table class="w3-table w3-striped">
 									<thead>
 										<tr>
 											<th></th>
