edit element specification table

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ I decided to create a new application profile because I could not find a pre-exi
 
         <!-- Table -->
 						<section>
-							<h4>#1</h4>
+							<h2>#1</h2>
 							<div>
 								<table class="w3-table w3-striped">
 									<thead>
@@ -78,31 +78,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>fundAgency</td>	
+											<td>creator</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Agency</td>
+											<td>Creator</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>http://www.utkmetadata.org/specification/utk_namespace/fundAgency</td>
+											<td>http://purl.org/dc/elements/1.1/creator </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>The funding agency for which the DMP is being prepared.</td>
+											<td>An entity primarily responsible for the creation of the resource content.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Required</td>
+											<td>Mandatory, Repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td>&lt;fundAgency termsource="LCNAF" termsourceid="n2006182431">National Science Foundation (U.S.). Subcommittee on Nanoscale Science, Engineering, and Technology&lt;/fundAgency></td>
+											<td>Doe, Jane</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td> Examples of a Creator include a person, an organization, or a service. Typically, the name of a Creator should be used to indicate the entity.</td>
 										</tr>
 									</tbody>
 								</table>
