add 3 & 4 to element spec

--- a/index.html
+++ b/index.html
@@ -168,31 +168,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>category</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Category</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/elements/1.1/subject/category  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Topic of the resource, selected from predefined list.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Mandatory, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>Home Improvement</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>Use the locally defined UTK controlled vocabulary</td>
 										</tr>
 									</tbody>
 								</table>
@@ -213,31 +213,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>sub-category</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Sub-category</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/elements/1.1/subject/subcategory  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>A topic that is subordinate to that described by the the Category element. selected from predefined list. </td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Mandatory, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>Kitchen</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>Use the locally defined UTK controlled vocabulary</td>
 										</tr>
 									</tbody>
 								</table>
