added 5, 6, & 7 to element specs

--- a/index.html
+++ b/index.html
@@ -258,19 +258,19 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>title</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Title</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/terms/title  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>A name given to the resource.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
@@ -278,11 +278,11 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>Build your own post modern dining room table</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>For complex works, series, or collections, the title may refer to a discrete unit within the larger entity (a print from a series, a photograph in a collection, a panel from a fresco cycle, a building within a temple complex) or it may identify only the larger entity (series, collection, cycle) itself.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -303,31 +303,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>indexingMaterialsTechSet</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Materials</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/indexingmaterialstechniquesset </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Materials needed to accomplish the task described .</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Mandatory, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>3: 14” x 10” plywood boards </td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>Each entry should be a discrete unit.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -348,31 +348,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>image</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Image</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.utk.edu/elements/relation/file </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Visual surrogate of the completed task .</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Optional</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>http://www.diyguides.com/image1234 </td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>A link or file should be provided for the system to display the image to users. </td>
 										</tr>
 									</tbody>
 								</table>
