added 8,9, & 10 to element spec

--- a/index.html
+++ b/index.html
@@ -393,19 +393,19 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>date</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Date</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.utk.edu/elements/date </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Wrapper for date created and date modified.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
@@ -438,19 +438,19 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>dateCreated</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Date Created</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/terms/created </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>The date the guide was uploaded to an online source.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
@@ -458,11 +458,11 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>2019-08-02</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>The date of upload is not necessarily the date the guide was written.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -483,19 +483,19 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>dateModified</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Date Modified</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/terms/modified </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Date that the resource was last updated..</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
@@ -503,7 +503,7 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>2019-11-02</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
