add spec-table id

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ I decided to create a new application profile because I could not find a pre-exi
     </div>
     <div id="elements">
         <h1>Element Specification</h1>
+	    <div id="spec-table">
 
         <!-- Table -->
 						<section>
