add td width to element spec table

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>creator</td>	
 										</tr>
 										<tr>
@@ -123,7 +123,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
@@ -168,7 +168,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>category</td>	
 										</tr>
 										<tr>
