add 11, 12, & 13 to element specs

--- a/index.html
+++ b/index.html
@@ -529,19 +529,19 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>description</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>SDescription</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/elements/1.1/description </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>An account of the resource.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
@@ -549,7 +549,7 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>Learn how to build a build a fireplace, including how to install an electric or gas insert...</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
@@ -574,15 +574,15 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>indexingMeasurementsSet</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Time</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/indexingmeasurementsset  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
@@ -594,7 +594,7 @@ I decided to create a new application profile because I could not find a pre-exi
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>01:30:00</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
@@ -619,31 +619,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td>Name</td>
-											<td>subject</td>	
+											<td>displayMaterialsTech</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Tools</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.getty.edu/research/publications/electronic_publications/cdwa/displaymaterialstech </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Tools needed to accomplish the task described in the guide.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Mandatory, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>Phillips Head Screwdriver</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>Each entry should be a discrete unit. See locally defined vocabulary for terms.</td>
 										</tr>
 									</tbody>
 								</table>
