--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>sub-category</td>	
 										</tr>
 										<tr>
@@ -258,7 +258,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>title</td>	
 										</tr>
 										<tr>
@@ -303,7 +303,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>indexingMaterialsTechSet</td>	
 										</tr>
 										<tr>
@@ -348,7 +348,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>image</td>	
 										</tr>
 										<tr>
@@ -393,7 +393,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>date</td>	
 										</tr>
 										<tr>
@@ -438,7 +438,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>dateCreated</td>	
 										</tr>
 										<tr>
@@ -483,7 +483,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>dateModified</td>	
 										</tr>
 										<tr>
@@ -528,7 +528,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>description</td>	
 										</tr>
 										<tr>
@@ -573,7 +573,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>indexingMeasurementsSet</td>	
 										</tr>
 										<tr>
@@ -618,7 +618,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>displayMaterialsTech</td>	
 										</tr>
 										<tr>
@@ -663,7 +663,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
@@ -708,7 +708,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
@@ -753,7 +753,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
@@ -798,7 +798,7 @@ I decided to create a new application profile because I could not find a pre-exi
 									</thead>
 									<tbody>
 										<tr>
-											<td>Name</td>
+											<td width="30%">Name</td>
 											<td>subject</td>	
 										</tr>
 										<tr>
