added 14-17 element specs

--- a/index.html
+++ b/index.html
@@ -664,31 +664,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td width="30%">Name</td>
-											<td>subject</td>	
+											<td>format</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Format</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>hhttp://purl.org/dc/terms/format  </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Format that the guide is presented in.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Mandatory, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>http://www.diyguides.com/videoicon</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>The format may be indicated by an icon or text. If an icon is used the address to the image file should be used.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -709,31 +709,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td width="30%">Name</td>
-											<td>subject</td>	
+											<td>relation</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Related Guide</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>http://purl.org/dc/terms/relation </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Related guides such as those published by the same creator or with the same subject matter.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Optional, repeatable</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>http://www.diyguides.com/1234</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>Should be a link to the related resource. Should be paired with metadata from the related resource such as the title and an image</td>
 										</tr>
 									</tbody>
 								</table>
@@ -754,31 +754,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td width="30%">Name</td>
-											<td>subject</td>	
+											<td>rating</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Rating</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.utk.edu/elements/rating </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Aggregate user ratings from 1-5 stars.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Optional</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>4/5</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>The rating should be indicated by a star icon such as that used by Amazon.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -799,31 +799,31 @@ I decided to create a new application profile because I could not find a pre-exi
 									<tbody>
 										<tr>
 											<td width="30%">Name</td>
-											<td>subject</td>	
+											<td>numRaters</td>	
 										</tr>
 										<tr>
 											<td>Label</td>
-											<td>Subject</td>
+											<td>Number of Raters</td>
 										</tr>
 										<tr>
 											<td>URI</td>
-											<td>https://www.utk.edu/elements/subject </td>
+											<td>https://www.utk.edu/elements/numraters </td>
 										</tr>
 										<tr>
 											<td>Definition</td>
-											<td>Wrapper for category and sub-category.</td>
+											<td>Number of users who have rated this guide and whose rating has contributed to the average displayed in stars.</td>
 										</tr>
 										<tr>
 											<td>Obligation & Occurrence</td>
-											<td>Mandatory</td>
+											<td>Optional</td>
 										</tr>
 										<tr>
 											<td>Example</td>
-											<td></td>
+											<td>7</td>
 										</tr>
 										<tr>
 											<td>Comments</td>
-											<td></td>
+											<td>An arabic numeral should be used and should be displayed to the right of the star rating icon.</td>
 										</tr>
 									</tbody>
 								</table>
